# orkestr8-sdk

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  version_editor.py
.github/workflows/: Test-and-lint.yml  publish-pkg.pypi.yml
example/: model.py
src/orkestr8/: cli.py  en_q.py  main.py
src/orkestr8/clients/: data_lake_client.py  protocol.py  s3.py
src/orkestr8/commands/: stop.py  train.py  update.py
src/orkestr8/parsers/: base_parser.py
tests/: conftest.py
tests/commands/: test_stop.py  test_train.py  test_update.py
tests/unit/: test_s3_client.py  test_utils.py
